Add a headless test fixture for the poker module, pinning the reply-transport fix and telling a stray chat hello it has reached a game client